2009-03-11  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/innerIO.ml*: [onclose_out] added

	* src/core/extlib/extFormat.ml: [newline_of], [spaces_of] added

	* src/core/extlib/extFormat.ml: [std_formatter], [err_formatter] now flushed at exit

	* src/core/extlib/extFormat.ml: [pp_set_formatter_output] now uses [pp_set_all_formatter_output_functions]

	* src/core/extlib_threads/IOThreads.ml: now using [RMutex] rather than [Mutex]

	* src/core/extlib_threads/extMutex.ml: [DebugMutex] created

	* build/odoc_extract_mli.ml: recreated

	* src/batteries_toolchain/batteries_help.ml: applied patch by kaustuv

	* src/core/extlib/extBigarray.ml*: applied patch by hcarty

	* src/core/extlib/extBigarray.ml*: [Genarray.iter], [Genarray.iteri], [Genarray.map], [Genarray.mapi], 

2009-03-10  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* build/odoc_tags.ml: now uses [Odoc_batteries_factored]

	* build/odoc_batteries_factored.ml: created

	* src/batteries_toolchain/batteries_help.ml: [print_module] now uses flattened name for display

	* myocamlbuild.ml: [sort_modules] now invokes [Depsort.add_node]
	
	* myocamlbuild.ml: [Depsort.add] renamed [Depsort.add_dependency]

	* src/core/extlib/extPervasives.ml: [open_in_bin], [open_in_gen], [open_out_bin], [open_out_gen] now clean-up

	* src/core/extlib/file.ml: [open_in], [open_out], [open_temporary_out] now clean up opened files when closing

	* testsuite/test_file.ml: [test_4], [test_5] added

	* testsuite/main.ml: [Test_file.test_4], [Test_file.test_5] added

2009-03-09  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>

	* src/syntax/pa_batteries/pa_batteries.ml: [initialized] removed

	* src/core/extlib/extMap.ml*: Commented out [min_key], [max_key], [choose]

	* myocamlbuild.ml: [Depsort.add_node] added

	* myocamlbuild.ml: [Pack.sort] now invokes [Depsort.add_node]

	* build/distrib2source.ml: removed
	
2009-03-08  Edgar Friendly  <thelema314@gmail.com>
