@@ -6,3 +6,5 @@
 <batteries.a>: precious
 <batteries_nothreads.a>: precious
 <fix_camlp4_print.*>:camlp4orf,use_camlp4_full
+"optcomp": include
+<generate_mli.*>: pkg_camlp4.lib
